学习中心的我的收藏页面（4个tab页）拼合完成

--- a/source/widget/myCollect/collect.html
+++ b/source/widget/myCollect/collect.html
@@ -10,7 +10,7 @@
     <!-- 这是CSS库文件 -->
     <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
     <!-- 这是当前模块样式文件 -->
-    <link href="collect.css" rel="stylesheet"></head>
+    <link href="collectApp.css" rel="stylesheet"></head>
     <body>
         <div class="content-collect">
             <div class="collect-feed">
@@ -118,6 +118,6 @@
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
-    <script type="text/javascript" src="collect.js"></script>
+    <script type="text/javascript" src="collectApp.js"></script>
 </body>
 </html>
