--- a/source/widget/courseInfor/live_coures.html
+++ b/source/widget/courseInfor/live_coures.html
@@ -11,7 +11,7 @@
 	 <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<!-- 这是当前模块样式文件 -->
-	<link href="ui-course-infor.css" rel="stylesheet"></head>
+	<link href="ui-course-info.css" rel="stylesheet"></head>
 <body>
 	<div id="container" class="container">
 		<div class="ui-course-infor-wrap">
@@ -282,6 +282,6 @@
 	<!-- 这是jquery库文件 -->
 	<script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
 	<!-- 这是当前模块js文件 -->
-	<script type="text/javascript" src="ui-course-infor.js"></script>
+	<script type="text/javascript" src="ui-course-info.js"></script>
 </body>
 </html>
