--- a/source/widget/courseInfor/open-course.html
+++ b/source/widget/courseInfor/open-course.html
@@ -11,7 +11,7 @@
 	 <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<!-- 这是当前模块样式文件 -->
-	<link href="ui-course-infor.css" rel="stylesheet"></head>
+	<link href="ui-course-info.css" rel="stylesheet"></head>
 	<link type="text/css" href="http://css04.xesimg.com/page_jscrollpane.css" rel="stylesheet" media="all" />
 <body>
 	<div class="ui-course-infor-wrap">
@@ -228,6 +228,6 @@
 	<!-- 这是当前模块js文件 -->
 	<script type="text/javascript" src="xue.mousewheel.js"></script>
 	<script type="text/javascript" src="xue.sidescroll.min.js"></script>
-	<script type="text/javascript" src="ui-course-infor.js"></script>
+	<script type="text/javascript" src="ui-course-info.js"></script>
 </body>
 </html>
