--- a/source/widget/UM.card.learn/index.html
+++ b/source/widget/UM.card.learn/index.html
@@ -31,9 +31,11 @@
                      <div class="cl-content-right">
                          <div>
                              <label for="">密码：</label>
-                             <input class="studyCardPwd" type="password"></div>
-                         <span class="studyCardPwd-warning error"></span>
-
+                             <input class="studyCardPwd" type="password">
+                         </div>
+                         <div class="error-box">
+                             <span class="studyCardPwd-warning error"></span>
+                         </div>
                          <button class="btn-pay btn btn-info">充值</button>
                          <a href="">查看充值记录</a>
                      </div>
