--- a/source/widget/UM.certificate.binding/index.html
+++ b/source/widget/UM.certificate.binding/index.html
@@ -20,14 +20,18 @@
                 <label for="">卡号：</label>
                 <input class="bindcardNo" type="text">
             </div>
-            <span class="bindcardNo-warning error"></span>
+            <div class="error-box">
+                <span class="bindcardNo-warning error"></span>
+            </div>
 
             <div>
                 <label for="">密码：</label>
                 <input class="bindcardPass" type="password">
             </div>
-            <span class="bindcardPass-warning error"></span>
-
+            <div class="error-box">
+                <span class="bindcardPass-warning error"></span>
+            </div>
+            
             <button class="btn-bindcard btn btn-info">激活</button>
         </div>
     </div>
