--- a/source/widget/UM.certificate/index.html
+++ b/source/widget/UM.certificate/index.html
@@ -23,13 +23,17 @@
                 <label for="">编号：</label>
                 <input class="serialNo" type="text">
             </div>
-            <span class="serialNo-warning error"></span>
+            <div class="error-box">
+                <span class="serialNo-warning error"></span>
+            </div>
             
             <div>
                 <label for="">密码：</label>
                 <input class="serialPass" type="password">
             </div>
-            <span class="serialPass-warning error"></span>
+            <div class="error-box">
+                <span class="serialPass-warning error"></span>
+            </div>
 
             <button class="btn-certificate btn btn-info">激活</button>
         </div>
