--- a/source/widget/UM.password/index.html
+++ b/source/widget/UM.password/index.html
@@ -19,7 +19,9 @@
             <p>当前密码：</p>
             <input id="curPwd" name="curPwd" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
             <label for="curPwd" class="curPwd-tip">请输入当前网站密码</label>
-            <span class="curPwd-warning error"></span>
+            <div class="error-box">
+                <span class="curPwd-warning error"></span>
+            </div>
         </div>
 
         <div class="newPwd-box">
@@ -27,7 +29,9 @@
             <input id="newPwd" name="newPwd" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
             <label for="newPwd" class="newPwd-tip">请设置密码</label>
             <div class="pass-strength">
-                <span class="newPwd-warning error"></span>
+                <div class="error-box">
+                    <span class="newPwd-warning error"></span>
+                </div>
                 <span class="pass-strong">
                     <i class="security">安全强度</i>
                     <strong class="strong1"></strong>   
@@ -39,7 +43,9 @@
             <p>确认密码：</p>
             <input id="confirmPwd" name="confirmPwd" type="password" maxlength="18" onKeypress="javascript:if(event.keyCode == 32)event.returnValue = false;"/>
             <label for="confirmPwd" class="confirmPwd-tip">请再次输入密码</label>
-            <span class="confirmPwd-warning error"></span>
+            <div class="error-box">
+                <span class="confirmPwd-warning error"></span>
+            </div>
         </div>
 
         <button id="form_submit" class="btn btn-info" name="submit" type="submit">保存</button>     
