--- a/source/widget/UM.Basic.information/bi-perfect.html
+++ b/source/widget/UM.Basic.information/bi-perfect.html
@@ -16,28 +16,28 @@
 <body>
     <div class="bi-content">
         <div class="bi-left">
-            <p>
+            <div>
                 <label for="">用户名：</label>
                 <span>gonghaibin3018@100tal.com</span>
-            </p>
-            <p>
+            </div>
+            <div>
                 <label for="">昵称：</label>
                 <span><a href="#">请进入学习中心完善该条信息</a></span>
-            </p>
-            <p>
+            </div>
+            <div>
                 <label for="">真实姓名：</label>
                 <span><a href="#">请进入学习中心完善该条信息</a></span>
-            </p>
-            <p>
+            </div>
+            <div>
                 <label for="">性别：</label>
                 <span><a href="#">请进入学习中心完善该条信息</a></span>
-            </p>
-            <p>
+            </div>
+            <div>
                 <label for="">年级：</label>
                 <span>初三</span>
                 <em>网校会在每年7月1日自动为你更新年级</em>
-            </p>
-            <p>
+            </div>
+            <div>
                 <span class="date">
                     <label for="">生日：</label>
                     <select class="year">
@@ -53,16 +53,16 @@
                     </select>
                     <i>日</i>
                 </span>
-            </p>
-            <p>
+            </div>
+            <div>
                 <label for="">所在地：</label>
                 <span><a href="#">请进入学习中心完善该条信息</a></span>
-            </p>
-            <p>
+            </div>
+            <div>
                 <label for="">学校：</label>
                 <input class="school" type="text">
                 <span class="school-warning error"></span>
-            </p>
+            </div>
             <button class="btn-submit btn btn-info" name="submit" type="submit">保存</button>
         </div>
         <div class="bi-right">
