--- a/source/widget/UM.card.activation/index.html
+++ b/source/widget/UM.card.activation/index.html
@@ -20,9 +20,9 @@
         </div>
         <div class="ca-content-right">
             <div><label for="">卡号：</label><input class="cardNo" type="text"></div>
-            <span class="cardNo-warning error"></span>
+            <div class="error-box"><span class="cardNo-warning error"></span></div>
             <div><label for="">密码：</label><input class="cardPass" type="password"></div>
-            <span class="cardPass-warning error"></span>
+            <div class="error-box"><span class="cardPass-warning error"></span></div>
             <button class="btn-active btn btn-info">激活</button><a href="">查看激活记录</a>
         </div>
     </div>
