Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/homework/homework1.html
+++ b/source/widget/homework/homework1.html
@@ -8,10 +8,10 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <!-- <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css"> -->
+    <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是CSS库文件 -->
-    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
     <!-- 这是当前模块样式文件 -->
     <link href="homework.css" rel="stylesheet">
   </head>
@@ -44,12 +44,12 @@
 		<p><i></i><span>作业已被驳回！ 原因：图片不清晰，请尽快重新提交！</span></p>
 		<!--作业驳回的提示开始-->
 		<h2>
-			<span class="homework-name pull-left">第三次作业 三角函数</span>
-			<span class="homework-status homework-status-yellow pull-left">已驳回</span>
-			<i class="pull-left"></i>
+			<span class="homework-name left">第三次作业 三角函数</span>
+			<span class="homework-status homework-status-yellow left">已驳回</span>
+			<i class="left"></i>
 			<!--提醒批改作业开始-->
-			<button class="homework-remind-btn pull-right">提醒</button>
-			<span class="pull-right">提醒老师尽快为我批改</span>
+			<button class="homework-remind-btn right">提醒</button>
+			<span class="right">提醒老师尽快为我批改</span>
 			<!--提醒批改作业结束-->
 		</h2>
 	</div>	
@@ -58,7 +58,7 @@
 	<!--交作业正文开始-->
 	<div class="homework-image-box" id="home_Image1" data-zoom="true">
 		<div class="homework-image-area">
-			<div class="homework-Thumbnails-box pull-left">
+			<div class="homework-Thumbnails-box left">
 				<div class="homework-page-btn"><i class="homework-prev_btn homework-prev-active"></i></div>
 				<div class="homework-Thumbnails-img-list" id="Thumbnails">
 					<ul>
@@ -99,7 +99,7 @@
 				<div class="homework-page-btn"><i class="homework-next-btn homework-next-active"></i></div>
 			</div>
 			<div class="homework-bigImg-box">
-				<div class="homework-rightMeun pull-right">
+				<div class="homework-rightMeun right">
 					<ul>
 						<li><i class="homework-audio"></i></li>
 						<li><i class="homework-leftRotate-btn"></i></li>
@@ -121,7 +121,7 @@
 					<!--作业反馈开始-->
 					<div class="homework-Feedback hiding">
 						<div class="homework-Feedback-cont">
-							<div class="homework-Feedback-header pull-left">
+							<div class="homework-Feedback-header left">
 								<img src="img/emote.png" class="homework-likeEmote">
 								<div class="homework-dialog">
 									<p class="homework-tipsInfo">完成作业奖励<em>15</em>金币和<em>1500</em>学力。辅导老师额外奖励你<em>150</em>个金币！</p>
@@ -134,9 +134,9 @@
 							<p class="homework-Feedback-describe">
 									32分，满分是50，还是有点偏低。错了一道逻辑推理的题目，和一道零点分段法的题目，这部分要好好再看看课程哦，要学会对题目归纳总结。但是其他题目做得都不错，看得出来暑假还是用心预习了的，字也写得很漂亮，很棒！但是老师还是要小小提醒你一下，看看老师帮你写了多少个解啊，咱们做题的时候一定要规范作答，上了初中，这一点非常重要哦~加油，下一次老师期待你提交上来完美的试卷！
 							</p>
-							<div class="homework-Feedback-video pull-left">
+							<div class="homework-Feedback-video left">
 								<h3>老师推荐你观看以下视频</h3>
-								<div class="homework-videoInfo pull-left">
+								<div class="homework-videoInfo left">
 									<ul>
 										<li><i></i><a href="">三角函数的概念</a></li>
 										<li><i></i><a href="">三角函数的解题技巧</a></li>
@@ -151,10 +151,10 @@
 		</div>
 		<!--查看评论区域开始-->
 		<div class="homework-comment-box">
-			<div class="homework-star pull-left">
-				<span class="pull-left">评价作业批改</span>
-				<div class="homework-star-area pull-left">
-					<ul class="pull-left">
+			<div class="homework-star left">
+				<span class="left">评价作业批改</span>
+				<div class="homework-star-area left">
+					<ul class="left">
 						<li class="on"></li>
 						<li class="on"></li>
 						<li class="on"></li>
@@ -170,9 +170,9 @@
 		<!--查看评论区域结束-->
 		<!--可以评论区域开始-->
 		<div class="homework-comment-box">
-			<div class="homework-star pull-left">
-				<span class="pull-left">评价作业批改</span>
-				<div class="homework-star-area pull-left" id="homeworkstarArea" role="homeworkstarArea">
+			<div class="homework-star left">
+				<span class="left">评价作业批改</span>
+				<div class="homework-star-area left" id="homeworkstarArea" role="homeworkstarArea">
 					<ul class="left">
 						<li class="on"></li>
 						<li class="on"></li>
@@ -185,7 +185,7 @@
 			</div>
 			<textarea class="homework-comment" placeholder="请对老师的作业批改做出评价，谢谢！"></textarea>
 			<div class="homework-submit-box">
-				<button class="homework-submit-btn pull-right">提交</button>
+				<button class="homework-submit-btn right">提交</button>
 			</div>
 		</div>
 		<!--可以评论区域结束-->
@@ -193,8 +193,12 @@
 	<!--交作业正文结束-->
 
 </div>	
+<!-- 这是jquery库文件 -->
+<script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
 <!-- 图片旋转js -->
-
+<script type="text/javascript" src="homework.ImageSet.min.js"></script>
+<script type="text/javascript" src="homework.ImageTrans.min.js"></script>
+<script type="text/javascript" src="homework.js"></script>
 <script type="text/javascript">
 	$(function(){
             //homeWork.imageCtl('.homework-image-box');
@@ -233,31 +237,6 @@
 		 	     scoreNum:".scoreNum"//显示评分分数的类
 	       })
           
-	       //根据分辨率重新计算图片
-	       $(window).resize(function(){
-		       	/*var _liCurrent = $('#home_Image1').find('.homework-Thumbnails-img-list li[class*="homework-current"]');
-		       	var _index = $('#home_Image1').find('.homework-Thumbnails-img-list li').index(_liCurrent)
-		       	var _imgW = $('#home_Image1').find('.ImageTransformJs').attr('_imgW');
-		       	var _imgH = $('#home_Image1').find('.ImageTransformJs').attr('_imgH');
-		       	var _maxW = $('#home_ImageTransform1').width();
-		       	var _maxH = $('#home_ImageTransform1').height();
-
-		       	var rate=(_maxH/_imgH>_maxW/_imgW?_maxW/_imgW:_maxH/_imgH); 
-				 
-		       	var _left = (_maxW - _imgW*rate)/ 2 + "px";
-		       	var _top = (_maxH - _imgH*rate)/ 2 + "px";
-		       	$('#home_Image1').find('.ImageTransformJs').css({
-		       		  'width':_imgW*rate,
-				  	  'height':_imgH*rate,
-				  	  'left': _left,
-					  'top': _top
-				})
-	            var _liNum = $('#Thumbnails').find('ul li').length;
-	            var _liH = $('#Thumbnails').find('ul li').outerHeight(true);
-	            var _ulTop = -($('#Thumbnails').find('ul').attr('_topNum'))*_liH;
-	            $('#Thumbnails').find('ul').height(_liNum*_liH).css('top', _ulTop);*/
-
-	       })
 	})
 	
 </script>
