--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -64,13 +64,17 @@
                     <div id="preview" style="display:inline-block;">
                         <img id="imghead" src=''>
                     </div>
-                    <div class="btn_up">
+                    <div class="btn_up hidden-btn">
                         <button class="btn_loadFile btn btn-info">+ 上传头像</button>
                     </div>
                     <input id="loadFile" type="file" name="img" class="input_file" onchange="getFullPath(this);Javascript:validate_img(this);" />
                     <em>每次上传消耗3000金币</em>
                     <span>仅支持JPG、GIF、PNG且文件小于2M，照片尺寸请大于200×200</span>
                 </div>
+                <div class="btn_up">
+                    <button class="btn_loadFile btn btn-info">重新上传</button>
+                </div>
+                <input id="loadFile" type="file" name="img" class="input_file show-lf" onchange="getFullPath(this);Javascript:validate_img(this);" />
                 <button id="btn_submit" class="btn btn-info" onclick="headsSave();">保存</button>
             </div>
         </div>
