金币 收货地址 conmit
金币 收货地址 conmit

--- a/source/widget/UserHome.gold/gold.html
+++ b/source/widget/UserHome.gold/gold.html
@@ -12,6 +12,7 @@
     <!-- 这是当前模块样式文件 -->
     <link href="gold.css" rel="stylesheet">
     <link href="../../static/css/ui.calendar.css" rel="stylesheet">
+    <link href="gold-address.less" rel="stylesheet">
     <!--<style>-->
         <!--.modal-title{color:#666;}-->
         <!--.modal-body{overflow: hidden;}-->
