Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/personalCenter/center-visit.html
+++ b/source/widget/personalCenter/center-visit.html
@@ -15,51 +15,54 @@
 <!--最近来访start-->
     <div class="center-visit">
         <div class="center-visit-intro">最近访问</div>
-        <div class="center-visit-person">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
+        <div class="center-visit-group">
+           <div class="center-visit-person">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person blueRed-v">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person blueRed-v">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div>
+           <div class="center-visit-person">
+               <img src="img/visit-head.png" alt="" class="center-visit-header"/>
+               <div class="center-visit-name">顾裴</div>
+               <div class="center-visit-time">一分钟前</div>
+           </div> 
         </div>
-        <div class="center-visit-person blueRed-v">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
-        <div class="center-visit-person">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
-        <div class="center-visit-person">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
-        <div class="center-visit-person">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
-        <div class="center-visit-person blueRed-v">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
-        <div class="center-visit-person">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
-        <div class="center-visit-person">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
-        <div class="center-visit-person">
-            <img src="img/visit-head.png" alt="" class="center-visit-header"/>
-            <div class="center-visit-name">顾裴</div>
-            <div class="center-visit-time">一分钟前</div>
-        </div>
+        
     </div>
 <!--最近来访end-->
 </body>
