学习中心后期更改

--- a/source/data/courses/material.html
+++ b/source/data/courses/material.html
@@ -12,25 +12,37 @@
                 <tr>
                     <td>
                         <p>第1讲：加减法巧算（一）（暑期课程）</p>
-                        <a href="##" class="load-btn btn-success btn">立即下载</a>
-                        <span>(已下载24次)</span>
+                        <a href="##" class="load-btn btn load-btn-none">无讲义</a>
+                        <a href="##" class="load-btn btn load-btn-none">无测试题</a>
                     </td>
                     <td>
                         <p>第1讲：加减法巧算（一）（暑期课程）</p>
-                        <a href="##" class="load-btn btn-success btn">立即下载</a>
-                        <span>(已下载24次)</span>
+                        <a href="##" class="load-btn btn load-btn-none">无讲义</a>
+                        <a href="##" class="load-btn btn load-btn-none">无测试题</a>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <p>第1讲：加减法巧算（一）（暑期课程）</p>
-                        <a href="##" class="load-btn btn-success btn">立即下载</a>
-                        <span>(已下载24次)</span>
+                        <a href="##" class="load-btn btn-success btn">下载讲义</a>
+                        <a href="##" class="load-btn btn-success btn">下载测试题</a>
                     </td>
                     <td>
                         <p>第1讲：加减法巧算（一）（暑期课程）</p>
-                        <a href="##" class="load-btn btn-success btn">立即下载</a>
-                        <span>(已下载24次)</span>
+                        <a href="##" class="load-btn btn-success btn">下载讲义</a>
+                        <a href="##" class="load-btn btn-success btn">下载测试题</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>第1讲：加减法巧算（一）（暑期课程）</p>
+                        <a href="##" class="load-btn btn-success btn">下载讲义</a>
+                        <a href="##" class="load-btn btn-success btn">下载测试题</a>
+                    </td>
+                    <td>
+                        <p>第1讲：加减法巧算（一）（暑期课程）</p>
+                        <a href="##" class="load-btn btn load-btn-none">无讲义</a>
+                        <a href="##" class="load-btn btn load-btn-none">无测试题</a>
                     </td>
                 </tr>
             </tbody>
