--- a/source/widget/UM.all.order/index.html
+++ b/source/widget/UM.all.order/index.html
@@ -11,8 +11,11 @@
     <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- 这是当前模块样式文件 -->
-    <link href="all.order.css" rel="stylesheet"></head>
-<body>
+    <link href="all.order.css" rel="stylesheet">
+    <link href="order.modal.css" rel="stylesheet">
+</head>
+<body>  
+    <div id="order-modal" data-toggle="modal" data-target="#orderModal"></div>
     <div class="ao-content">
         <ul class="ao-list">
             <li class="current"><a href="#">全部订单 32</a></li>
@@ -112,7 +115,7 @@
                     <li class="ao-third ao-li">已取消</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-danger">重新购买</button>
+                            <button class="btn btn-danger" onclick="orderModal();">重新购买</button>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
@@ -230,7 +233,9 @@
     </div>
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
+    <script src="../../lib/bootstrap/3.3.5-custom/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../Module.Modal/Modal.js"></script>
     <!-- 这是当前模块js文件 -->
-    <script type="text/javascript" src="all.order.js"></script>
+    <script type="text/javascript" src="order.modal.js"></script>
 </body>
 </html>
