重新购买需求更改

--- a/source/widget/UM.all.order/index.html
+++ b/source/widget/UM.all.order/index.html
@@ -15,7 +15,6 @@
     <link href="order.modal.css" rel="stylesheet">
 </head>
 <body>  
-    <div id="order-modal" data-toggle="modal" data-target="#orderModal"></div>
     <div class="ao-content">
         <ul class="ao-list">
             <li class="current"><a href="#">全部订单 32</a></li>
@@ -115,7 +114,7 @@
                     <li class="ao-third ao-li">已取消</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-danger" onclick="orderModal();">重新购买</button>
+                            <button class="btn btn-danger" data-toggle="modal" data-target="#orderModal" onclick="orderModal();">重新购买</button>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
