--- a/source/data/gold/gold-present-modal.html
+++ b/source/data/gold/gold-present-modal.html
@@ -1,32 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>金币明细</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.css">
-    <!-- 这是当前模块样式文件 -->
-    <link href="gold.css" rel="stylesheet">
-    <link href="../../static/css/ui.calendar.css" rel="stylesheet">
-    <link href="gold-address.less" rel="stylesheet">
-    <!--<style>-->
-        <!--.modal-title{color:#666;}-->
-        <!--.modal-body{overflow: hidden;}-->
-        <!--.modal-dialog{width: 740px;}-->
-        <!--.present-address-box form label{display: block;}-->
-        <!--.present-address-box span{font-size: 16px;}-->
-    <!--</style>-->
-</head>
-<body>
 <div class="present-card-tip"></div>
 <div class="present-box">
-    <img src="/static/img/UserHome.gold/Modal-present.png" />
-    <div class="present-intro">
-        <span class="present-name">清华大学扑克牌</span>
+    <img src="/static/img/UserHome.gold/Modal-present.png"/>
+    <div class="present-intro"><span class="present-name">清华大学扑克牌</span>
         <div class="present-intro-name">
             <span class="present-intro-title">描<span>述 ：</span></span>
             <span class="present-intro-content">清华园，孺子牛.......想要更深入了解清华大学么，那就一起玩会扑克牌吧。让玩耍与认知达到统一，美观而便捷</span>
@@ -35,10 +10,11 @@
             <span class="present-intro-title">数<span>量 ：</span></span>
             <div class="present-dec"><p class="p1"></p></div><div class="present-num">1</div>
             <div class="present-add"><p class="p1"</p><p class="p2"></p></div>
-            <span class="present-piece">仅剩 <em>'+ data.num +'</em> 张</span></div>
+            <span class="present-piece">仅剩 <em>80</em> 张</span>
+        </div>
         <div class="present-intro-name">
             <span class="present-intro-title">兑换额 ：</span>
-            <span class="present-intro-gold"><em>'+ data.price +'</em>金币</span>
+            <span class="present-intro-gold"><em>123</em>金币</span>
         </div>
     </div>
 </div>
@@ -141,10 +117,4 @@
         </div>
     </form>
 </div>
-<div class="present-exchange">确认兑换</div>';
-<script src="../../lib/jQuery/1.11.1/jquery.js"></script>
-<script src="../../lib/bootstrap/3.3.5-custom/js/bootstrap.js"></script>
-<script src="gold.js"></script>
-<script src="../Module.Modal/Modal.js"></script>
-</body>
-</html>
+<div class="present-exchange">确认兑换</div>
