--- a/source/widget/UM.Basic.information/index.html
+++ b/source/widget/UM.Basic.information/index.html
@@ -42,7 +42,7 @@
                 <em>网校会在每年7月1日自动为你更新年级</em>
             </div>
             <div>
-                <form id="date" name="date">
+                <form id="date" name="date" data-date="2015-2-1">
                     <label for="">生日：</label>
                     <select class="year" name="year" onchange="yearday(this.value)">
                       <option>请选择</option>
