--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -29,6 +29,9 @@
             </div>
             <div class="hp-local">
                 <form action="" method="POST" enctype="multipart/form-data" id="headsImg">
+                    <div class="message-error">
+                        <span>12</span>
+                    </div>
                     <div class="hl-box">
                         <div id="preview" style="display:inline-block;">
                             <span><img id="imghead" src='img/headp.jpg'></span>
