--- a/source/widget/UM.all.order/index.html
+++ b/source/widget/UM.all.order/index.html
@@ -17,14 +17,14 @@
 <body>  
     <div class="ao-content">
         <ul class="ao-list">
-            <li class="current"><a href="#">全部订单 32</a></li>
-            <li><a href="#">已完成 19</a></li>
-            <li><a href="#">待支付 22</a></li>
-            <li><a href="#">已取消 11</a></li>
-            <li><a href="#">待审核 10</a></li>
-            <li><a href="#">审核未通过 5</a></li>
-            <li><a href="#">待发货 5</a></li>
-            <li><a href="#">待收货 6</a></li>
+            <li class="current" data-url="/MyOrders/ajaxOrderList/" data-params="1"><a href="#">全部订单 32</a></li>
+            <li data-url="/MyOrders/ajaxOrderList/" data-params="2"><a href="#">已完成 19</a></li>
+            <li data-url="/MyOrders/ajaxOrderList/" data-params="3"><a href="#">待支付 22</a></li>
+            <li data-url="/MyOrders/ajaxOrderList/" data-params="4"><a href="#">已取消 11</a></li>
+            <li data-url="/MyOrders/ajaxOrderList/" data-params="5"><a href="#">待审核 10</a></li>
+            <li data-url="/MyOrders/ajaxOrderList/" data-params="6"><a href="#">审核未通过 5</a></li>
+            <li data-url="/MyOrders/ajaxOrderList/" data-params="7"><a href="#">待发货 5</a></li>
+            <li data-url="/MyOrders/ajaxOrderList/" data-params="8"><a href="#">待收货 6</a></li>
         </ul>
         <div class="some-order">
             <ul class="ao-title">
