修改金币、找老师、直播样式

--- a/source/data/gold/gold-card-modal.html
+++ b/source/data/gold/gold-card-modal.html
@@ -1,6 +1,6 @@
 <div class='red-card-tip'></div>
 <div class='red-card-box'>
-    <img src='/static/img/UserHome.gold/Modal-red-card.png' />
+    <img src='/static/img/Modal-red-card.png' />
     <div class='red-card-intro'>
         <span class='red-card-name'>红名卡</span>
         <div class='red-card-intro-name'>
