--- a/source/widget/UM.mobile.phone/exist.user.html
+++ b/source/widget/UM.mobile.phone/exist.user.html
@@ -57,7 +57,7 @@
         </div>
 
         <div>
-            <button id="form_submit" class="login_btn btn_submit" name="submit" type="submit">保存</button>
+            <button id="mpform_submit" class="login_btn btn_submit" name="submit" type="submit">保存</button>
         </div>      
     </div>
     <!-- 这是jquery库文件 -->
