--- a/source/widget/UM.mobile.phone/index.html
+++ b/source/widget/UM.mobile.phone/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div>
-            <button id="form_submit" class="btn btn-info" name="submit" type="submit">保存</button>
+            <button id="mpform_submit" class="btn btn-info" name="submit" type="submit">保存</button>
         </div>      
     </div>
     <!-- 这是jquery库文件 -->
