第三方绑定修改

--- a/source/widget/UM.Basic.information/bi-perfect.html
+++ b/source/widget/UM.Basic.information/bi-perfect.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="bi-content">
-        <form action="" name="date">
+        <form action="" name="">
             <div class="bi-left">
                 <div class="message-error">
                     <span></span>
