--- a/source/widget/UM.third.bind/index.html
+++ b/source/widget/UM.third.bind/index.html
@@ -39,6 +39,14 @@
                 <a href="#">解除绑定</a>
             </li>
         </ul>
+
+        <div class="prompt-box">
+            <img class="prompt" src="img/prompt.png">
+            <div class="cb-prompt-box">
+                <h3>提示</h3>
+                <p>如果您对激活听课证有任何疑问，请查看“帮助中心”或拨打：<strong>400-800-2211</strong></p>
+            </div>
+        </div>
     </div>
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
